# ZVK

./: CMakeLists.txt  main.cpp
app/: Application.cpp  Application.h
headers/GLFW/: glfw3.h
headers/SDL2/: SDL.h  SDL_assert.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keycode.h  SDL_locale.h  SDL_metal.h  SDL_misc.h  SDL_opengl.h  SDL_pixels.h  SDL_platform.h  SDL_rwops.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_version.h  SDL_video.h  SDL_vulkan.h  begin_code.h
headers/glm/: CMakeLists.txt  ext.hpp  fwd.hpp  vec2.hpp  vec3.hpp  vec4.hpp
headers/glm/detail/: _vectorize.hpp  func_common.inl  func_integer.inl  func_trigonometric.inl  func_vector_relational.inl  setup.hpp  type_half.inl  type_mat2x3.inl  type_mat2x4.inl  type_mat3x2.inl  type_mat3x3.inl  type_mat3x4.inl  type_mat4x2.inl  type_mat4x3.inl  type_mat4x4.inl  type_quat.inl  type_vec1.inl  type_vec2.inl
headers/glm/ext/: matrix_clip_space.inl  matrix_int3x3_sized.hpp  matrix_int3x4_sized.hpp  matrix_int4x2_sized.hpp  matrix_int4x3_sized.hpp  matrix_int4x4_sized.hpp  matrix_projection.inl  matrix_transform.inl  matrix_uint2x2_sized.hpp  matrix_uint2x3_sized.hpp  matrix_uint2x4_sized.hpp  matrix_uint3x2_sized.hpp  matrix_uint3x3_sized.hpp  (+14 more)
shader/: compile.sh  frag.spv  vert.spv
zvk/: ZVK.h  ZVKAuxiliary.cpp  ZVKAuxiliary.h  ZVKConstructor.cpp  ZVKConstructor.h  ZVKContext.cpp  ZVKContext.h  ZVKDeclare.h  ZVKDestructor.cpp  ZVKDestructor.h  ZVKInternal.h  ZVKManager.cpp  ZVKManager.h  ZVKNoncopyable.h  ZVKPlatform.h  ZVKScopeguard.h  ZVKSingleton.h
zvk/base/: common.h  internal.h  noncopyable.h  scopeguard.h  singleton.h  surfacetype.h
zvk/camera/: Camera.cpp  Camera.hpp
zvk/imgui_core/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
zvk/loader/: stb_image.h  tiny_obj_loader.h
zvk/log/: log.cpp  log.h  logmanager.h
zvk/platform/: Platform.h  ext_glfw.cpp  ext_glfw.h  ext_sdl.cpp  ext_sdl.h  platform_osx.h  platform_osx.mm  platform_win32.cpp  platform_win32.h
zvk/tools/: Utils.cpp  Utils.h  mutex.h
(+15 files in other folders)
